# h7_rust_embedded

./: .gitignore
jtag-gpio/: Cargo.toml  memory.x
jtag-gpio/.cargo/: config.toml
jtag-gpio/src/: device.rs  led.rs  main.rs
